# geometry-diagram-generator

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  eval_viewer.py  index.html  main.py  pyproject.toml
assets/: index-Bwcg8e8l.js
benchmark/: ATTRIBUTION.md  ai_judge.py  db.py  import_run.py  irr.py  models.py  server.py
benchmark-ui/: index.html  package.json  vite.config.js
curriculum/: README.md  convert_pdfs.py  extract_curriculum.py  extract_geometry_curriculum.py  extract_topics.py  generate_prompts.py  geometry_curriculum.md  student_queries.json  student_queries.md  to_benchmark.py
data/: runs.json
demo-ui/: domain.penrose  geometry.domain  geometry.style  index.html  package.json  pnpm-lock.yaml  style.penrose  vite.config.js
docs/: abstract-draft.md  datasheet.md  eval-report-curriculum-v1.md  gen_examples.py  geogen-paper-outline.md  geometry-dsl-spec.md  headline_run_plan.md  human_study_protocol.md  learning_curves_onboarding.md  related-work.md  render_recipe.py  sample_problems.md  scenario-data-review.md  section1-introduction.md  section3-benchmark-design.md  section4-verification-reliability.md  section6-leaderboard.md  strategies.md  templated-scenarios.md
eval-viewer-ui/: .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
evals/: compare.py  eval_viewer.py  generate_scenarios.py  ir_diagnostics.py  leaderboard_analyze.py  leaderboard_launch.sh  leaderboard_plot.py  regrade.py  reporting.py  run.py  sample_scenarios.py  scenarios.py  scenarios.yaml  scenarios_core.yaml  scenarios_generalization.yaml  scenarios_generated.yaml  scenarios_geometry_curriculum.yaml  scenarios_pilot.yaml  scenarios_pilot_t3.yaml  scenarios_query.yaml  scenarios_smoke.yaml  scenarios_smoke_trapezoid_circle.yaml  scenarios_stress.yaml  sympy_checks.py
geometry_diagrams/: VENDORING.md  __init__.py  config.py  facade.py
ir/: __init__.py  auto_checks.py  checks.py  domain.py  emitter.py  errors.py  ir.py  models.py  plan.py  queries.py  refs.py  render_util.py  renderer.py  substance.py  test_scenarios.py  to_svg.py  to_sympy.py  to_tikz.py
paper/: .gitignore  Makefile  README.md  abstract.tex  geogen.tex  geogenbench.tex  preamble.tex  refs.bib
recipe/: catalog.py  dsl.py  expressions.py  lower.py  solve.py
renderer/: Dockerfile  Texlivefile
scripts/: export_static.py
slides/: README.md  SPEAKER_NOTES.md  (+1 more)
(+453 files in other folders)
