[project]
name = "geometry-tikz-demo"
version = "0.1.0"
description = "Generate geometry diagrams in TikZ using LLMs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cairosvg>=2.9.0",
    "httpx>=0.28.1",
    "langchain-anthropic>=1.4.3",
    "langchain-google-genai>=4.2.2",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "matplotlib>=3.10.9",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "sympy>=1.14.0",
]

[dependency-groups]
dev = [
    "mlcroissant>=1.1.0",
    "pymupdf>=1.27.2.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
